--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -16,4 +16,22 @@ output:
         in_header: preamble.tex
 ---
 
+#
+
+```{r naomi-continent, echo=FALSE, out.width="95%"}
+knitr::include_graphics("../figures/hiv-aids/naomi-continent.png")
+```
+
+#
+
+```{r intercept-comparison, echo=FALSE, out.width="95%"}
+knitr::include_graphics("../figures/naomi-aghq/intercept-comparison.png")
+```
+
+#
+
+```{r pca-demo, echo=FALSE, out.width="95%"}
+knitr::include_graphics("../figures/naomi-aghq/pca-demo.png")
+```
+
 # References {.allowframebreaks}
