--- a/92-appendixC.Rmd
+++ b/92-appendixC.Rmd
@@ -25,11 +25,19 @@ resource_version <- "20230811-095752-5b8181d8"
 
 #### `tmbstan` {#tmbstan-epil}
 
-Add diagnostics here.
+(ref:tmbstan-epil) Figure caption.
+
+```{r tmbstan-epil, fig.cap="(ref:tmbstan-epil)"}
+knitr::include_graphics("figures/naomi-aghq/tmbstan-epil.png")
+```
 
 #### `rstan` {#rstan-epil}
 
-Add diagnostics here.
+(ref:stan-epil) Figure caption.
+
+```{r stan-epil, fig.cap="(ref:stan-epil)"}
+knitr::include_graphics("figures/naomi-aghq/stan-epil.png")
+```
 
 ## Simplified Naomi model description {#naomi-math}
 
